Bot_V2/src/objects/Bot_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Einstein_DatasetId__c</fullName>
        <description>Einstein dataset identifier</description>
        <label>Einstein DatasetId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Einstein_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Einstein Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Einstein_ModelId__c</fullName>
        <description>Einstein Model identifier</description>
        <label>Einstein ModelId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Einstein_Token__c</fullName>
        <label>Einstein Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bot Settings</label>
</CustomObject>